Fix modal on mobile and change default editor behavior

--- a/components/Modal/Modal.scss
+++ b/components/Modal/Modal.scss
@@ -19,13 +19,15 @@ $modal-padding: 1rem;
     overflow-y: auto;
     display: block;
     overflow: auto;
-    width: 50%;
+    width: 100%;
     max-height: 100vh;
 
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    position: absolute;
+    position: absolute !important;
+    top: 50% !important;
+    left: 50% !important;
+    -moz-transform: translateX(-50%) translateY(-50%) !important;
+    -webkit-transform: translateX(-50%) translateY(-50%) !important;
+    transform: translateX(-50%) translateY(-50%) !important;
 
     &.panel {
         //top: 0px;
